--- a/test_config.yaml
+++ b/test_config.yaml
@@ -5,7 +5,7 @@ model_params:
 
 exp_params:
   dataset: celeba
-  # data_path: "drive.google.com/file/d/0B7EVK8r0v71pZjFTYXZWM3FlRnM/view?usp=sharing&resourcekey=0-dYn9z10tMJOBAkviAcfdyQ"
+  data_path: "../../shared/Data/"
   img_size: 64
   batch_size: 144 # Better to have a square number
   LR: 0.005
@@ -14,6 +14,7 @@ exp_params:
 
 trainer_params:
   gpus: 1
+  max_nb_epochs: 50
   max_epochs: 30
 
 logging_params:
